--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <li><a class="navigation__link" href="/#1">MISSION</a></li>
         <li><a class="navigation__link" href="/#2">TEAM</a></li>
         <li><a class="navigation__link" href="/#3">NEWS</a></li>
-        <li><a class="navigation__link" href="/#4">RESOURCES</a></li>
+        <li><a class="navigation__link" href="/#4">LINKS</a></li>
         <li><a class="navigation__link" href="/#5">FAQ</a></li>
         <li><a class="navigation__link" href="/#6">CONTACT</a></li>
       </ul>
@@ -39,7 +39,7 @@
 <div class="container">
 <p class="m-0 text-center text-white">Copyright &copy; 2018, The C Plus Plus Alliance, Inc.
 <!-- <address> VF missing style -->
-<br>Contact: <!-- <a href="mailto:info@cppalliance.org"> -->info@cppalliance.org <!-- </a> -->
+<br>Contact: <!-- <a href="mailto:info@cppalliance.com"> -->info@cppalliance.com <!-- </a> -->
 <!-- </address> -->
 </p>
 </div>
