Various site updates:
- Updated website logo - logo.svg
- Added Richard to the Team section
- Added Richard's bio: people/richard.html
- Removed facebook: contact.html
- Updated date to 2020 at bottom of page
- Updated bottom contact to info@cppalliance.org
- Added proposal page - proposals.html
- Replaced images/cpp.jpg with cpp.png
- Removed cpp.png

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
     </div>
     <div class='connect-content'>
       <div class='row row-sm'>
-        <div class='col-fourth col-fourth-sm'>
+        <div class='col-third col-third-sm'>
           <a class='social-icon' href="https://github.com/CPPAlliance">
             <div class='social-icon-img-wrapper'>
               <img class='social-icon-img github' alt='github-logo' src='{{ site.baseurl }}/images/icons/github.svg' />
@@ -15,15 +15,7 @@
             <span class='social-icon-text'>GitHub</span>
           </a>
         </div>
-        <div class='col-fourth col-fourth-sm'>
-          <a class='social-icon' href="https://www.facebook.com/CPPAlliance/">
-            <div class='social-icon-img-wrapper'>
-              <img class='social-icon-img facebook' alt='facebook-logo' src='{{ site.baseurl }}/images/icons/facebook.svg' />
-            </div>
-            <span class='social-icon-text'>Facebook</span>
-          </a>
-        </div>
-        <div class='col-fourth col-fourth-sm'>
+        <div class='col-third col-third-sm'>
           <a class='social-icon' href="https://twitter.com/cppalliance">
             <div class='social-icon-img-wrapper'>
               <img class='social-icon-img twitter' alt='twitter-logo' src='{{ site.baseurl }}/images/icons/twitter.svg' />
@@ -31,7 +23,7 @@
             <span class='social-icon-text'>Twitter</span>
           </a>
         </div>
-        <div class='col-fourth col-fourth-sm'>
+        <div class='col-third col-third-sm'>
           <a class='social-icon' href="https://www.linkedin.com/in/cppalliance/">
             <div class='social-icon-img-wrapper'>
               <img class='social-icon-img linkedin' alt='linkedin-logo' src='{{ site.baseurl }}/images/icons/linkedin.svg' />
