--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,8 +79,8 @@ type: website
 
   <footer class='footer'>
     <p class='text-xxs footer-text'>
-      <span class='line'>&copy; 2018 The C Plus Plus Alliance, Inc.</span>
-      <span class='line'>Contact us at: <a href='mailto:{{ 'info@cppalliance.com' | encode_email }}'><img class='email' alt='email-links' src='{{ site.baseurl }}/images/email.svg' /></a></span>
+      <span class='line'>&copy; 2020 The C Plus Plus Alliance, Inc.</span>
+      <span class='line'>Contact us at: <a href='mailto:{{ 'info@cppalliance.org' | encode_email }}'>info@cppalliance.org</a></span>
     </p>
   </footer>
 
