--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,7 +24,7 @@
           </a>
         </div>
         <div class='col-third col-third-sm'>
-          <a class='social-icon' href="https://www.linkedin.com/in/cppalliance/">
+          <a class='social-icon' href="https://www.linkedin.com/company/cppalliance/">
             <div class='social-icon-img-wrapper'>
               <img class='social-icon-img linkedin' alt='linkedin-logo' src='{{ site.baseurl }}/images/icons/linkedin.svg' />
             </div>
