--- a/_sass/modules/layout.scss
+++ b/_sass/modules/layout.scss
@@ -284,13 +284,23 @@
   em {
     font-weight: 700;
   }
-  code {
-    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
-    background-color: rgba(27,31,35,.05);
-    border-radius: 3px;
+  pre {
+    word-wrap: normal;
+    display: block;
+    margin-bottom: 1em;
+    padding: 1rem;
+    width: auto;
+    overflow: auto;
     font-size: 85%;
-    margin: 0;
-    padding: .2em .4em;
+    background-color: rgba(27, 31, 35, 0.05);
+    border-radius: 4px;
+    code {
+      font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
+      font-size: 85%;
+      white-space: inherit;
+      padding: 0;
+      background-color: transparent;    
+    }
   }
 }
 
