Code block format feedback & Post page RHS panel updates

--- a/_sass/modules/layout.scss
+++ b/_sass/modules/layout.scss
@@ -280,6 +280,9 @@
   ol {
     list-style-type: decimal;
     list-style-position: inside;
+    li {
+      margin: 0.5rem 0;
+    }
   }
   em {
     font-weight: 700;
@@ -287,19 +290,20 @@
   pre {
     word-wrap: normal;
     display: block;
-    margin-bottom: 1em;
-    padding: 1rem;
+    margin: 1rem 0;
+    padding: 1rem 1rem;
     width: auto;
     overflow: auto;
-    font-size: 85%;
+    font-size: 100%;
     background-color: rgba(27, 31, 35, 0.05);
     border-radius: 4px;
     code {
       font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
-      font-size: 85%;
+      font-size: 100%;
       white-space: inherit;
       padding: 0;
-      background-color: transparent;    
+      background-color: transparent;
+      line-height: 2;
     }
   }
 }
