--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,17 +45,21 @@ type: article
       </article>
     </section>
   </div>
+
   <section class="section news" id='news'>
     <div class='section-title'>
-      <h2 class='header text-xl recent-post-header'>Recent Posts</h2>
+      <h2 class='header text-xl recent-post-header'>All Posts by This Author</h2>
     </div>
     <div class='news-content formatted-text'>
+      {% assign posts = site.posts | where:'categories', page.categories %}
       <ul>
-        {% for post in site.posts limit:3 %}
+        {% for post in site.posts %}
+        {% if post.categories == page.categories %}
         <li class='news-list-item '>
           <span class='text-s news-date'>{{ post.date | date: "%m/%d/%Y"}}</span>
           <a class='text-l news-title link' href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
         </li>
+        {% endif %}
         {% endfor %}
         <li>
           <a class='text-l all link' href="{{site.baseurl}}/news">View All Posts...</a>
@@ -63,4 +67,5 @@ type: article
       </ul>
     </div>
   </section>
+
 </div>
