Fix inline code identifiers

--- a/_sass/modules/layout.scss
+++ b/_sass/modules/layout.scss
@@ -272,6 +272,7 @@
   }
   p {
     padding: 5px 0;
+    line-height: 1.65;
   }
   ul {
     list-style-type: disc;
@@ -286,6 +287,14 @@
   }
   em {
     font-weight: 700;
+  }
+  code {
+    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
+    background-color: rgba(27,31,35,.05);
+    border-radius: 3px;
+    font-size: 95%;
+    margin: 0;
+    padding: .2em .4em;
   }
   pre {
     word-wrap: normal;
