--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -42,6 +42,18 @@
     @include breakpoint($desktop-large) {
       padding: 80px 245px 95px;
     }
+
+    blockquote {
+      padding: 0 1em;
+      color: #6a737d;
+      border-left: .25em solid #dfe2e5;
+      margin-top: 11px;
+      margin-bottom: 1rem;
+    }
+    ol {
+      padding-left: 30px;
+      list-style-position: outside;
+    }
   }
 
   .caption {
@@ -159,6 +171,40 @@
   .section-title {
     @include breakpoint($desktop-small) {
       margin-bottom: 35px;
+    }
+  }
+
+  table {
+    display: block;
+    width: 100%;
+    overflow: auto;
+    vertical-align: middle;
+    box-sizing: border-box;
+    border-collapse: collapse;
+    margin: .8rem 0;
+    th {
+      font-weight: 600;
+      text-align: center;
+    }
+
+    th,
+    td {
+      padding: 6px 13px;
+      border: 1px solid #dfe2e5;
+      vertical-align: middle;
+    }
+
+    tr {
+      border-top: 1px solid #c6cbd1;
+
+
+      &:nth-child(2n) {
+        background-color: #f6f8fa;
+      }
+    }
+
+    img {
+      background-color: transparent;
     }
   }
 }
