Fix markdown styling
* fix link, code, p, li, h1, h2 style to refer GFM
* fix h1 horizontal-line formattin
* fix code block line-height

--- a/_sass/modules/github-light.scss
+++ b/_sass/modules/github-light.scss
@@ -29,6 +29,7 @@
 .highlight .kt { color: #d73a49 } /* Keyword.Type */
 .highlight .m { color: #666666 } /* Literal.Number */
 .highlight .s { color: #032f62 } /* Literal.String */
+// .highlight .n { color: #6f42c1; } /* Name.Attribute */
 .highlight .na { } /* Name.Attribute */
 .highlight .nb { color: #005cc5 } /* Name.Builtin */
 .highlight .nc { color: #6f42c1 } /* Name.Class */
