--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -43,6 +43,15 @@
       padding: 80px 245px 95px;
     }
 
+    article, article p { font-size: 16px !important;}
+
+    a {
+      color: #0366d6;
+      text-decoration: none;
+      font-weight: normal;
+      line-height: 1.5;
+    }
+
     blockquote {
       padding: 0 1em;
       color: #6a737d;
@@ -50,9 +59,61 @@
       margin-top: 11px;
       margin-bottom: 1rem;
     }
+
+    em {
+      font-weight: normal;
+      font-style: italic;
+     }
+
+    h1, h2 {
+      border-bottom: 1px solid #eaecef;
+      padding-top: 0;
+      margin-bottom: 16px;
+      padding-bottom: .3em;
+      margin-top: 24px;
+    }
+
+    h1 {
+      line-height: 2.5rem;
+      font-size: 2em;
+    }
+
+    h2 {
+      font-size: 1.7em;
+    }
+
     ol {
       padding-left: 30px;
       list-style-position: outside;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
+    p code {
+      line-height: 1.5;
+      font-size: 85%;
+    }
+
+    pre code {
+      overflow: auto;
+      font-size: 13.6px !important;
+      line-height: 1.45;
+      background-color: #f6f8fa;
+      border-radius: 3px;
+      font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+    }
+
+    strong, strong em {
+      font-weight: 600;
+    }
+
+    ul {
+      margin-bottom: 16px;
+      li {
+        font-size: 1rem;
+      }
     }
   }
 
