Fix contrast ratio & indentation in code blocks
* fix contrast ratio on keyword colors in code blocks
* shorten code indentation in code blocks

--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -103,6 +103,8 @@
       background-color: #f6f8fa;
       border-radius: 3px;
       font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+      -moz-tab-size: 4;
+      tab-size: 4;
     }
 
     strong, strong em {
