--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -43,6 +43,10 @@
       padding: 80px 245px 95px;
     }
 
+    @media only screen and (min-width: 1500px) {
+      padding: 80px 140px 95px;
+    }
+
     article, article p { font-size: 16px !important;}
 
     a {
