media query fix for sam's feedback

--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -39,9 +39,9 @@
        padding: 60px 100px 70px;
     }
 
-    @include breakpoint($desktop-large) {
-      padding: 80px 245px 95px;
-    }
+    // @include breakpoint($desktop-large) {
+    //   padding: 80px 245px 95px;
+    // }
 
     @media only screen and (min-width: 1500px) {
       padding: 80px 140px 95px;
