new blog layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,23 +10,21 @@ type: article
     {% endif %}
 
 
+    <div class="gradient-bg"></div>
     <section class='section article'>
       {% if page.caption %}
         <span class='caption'>{{ page.caption }}</span>
       {% endif %}
 
       <article>
-        <span class='text-s news-date'>{{ page.date | date: "%m/%d/%Y"}}</span>
-        <h2 class='text-l news-title'>{{ page.title }}</h2>
+      <div class="title-section">
+        <h2 class='text-l news-title no-border'>{{ page.title }}</h2>
 
         {% if page.author %}
         <div class='author'>
           <!-- list of all potential authors -->
-          {% if page.author-id %}
-            <img class='author-img' src='{{ site.baseurl }}/images/people/{{page.author-id}}.jpg' alt={{page.author}} />
-          {% endif %}
 
-          <span class='text-xxs author-name'>by
+          <span class='text-xxs author-name'>By
             {% if page.author-id %}
               <a class='link' href='{{ site.baseurl }}/people/{{page.author-id}}'>
             {% endif %}
@@ -34,11 +32,17 @@ type: article
             {{ page.author }}
 
             {% if page.author-id %}
-            </a>
+            </a> on
             {% endif %}
           </span>
+          <span class=''>{{ page.date | date: "%b %-d, %Y"}}</span>
+        </div>
+        {% else %}
+        <div class='author'>
+          <span class=''>{{ page.date | date: "%b %-d, %Y"}}</span>
         </div>
         {% endif %}
+      </div>
         <div class='text-xxs content-text generated-content'>
           {{ content }}
         </div>
@@ -46,7 +50,7 @@ type: article
     </section>
   </div>
 
-  <section class="section news" id='news'>
+  <section class="section news bottom-layout" id='news'>
     <div class='section-title'>
       <h2 class='header text-xl recent-post-header'>All Posts by This Author</h2>
     </div>
