--- a/_sass/pages/post_backup.scss
+++ b/_sass/pages/post_backup.scss
@@ -1,9 +1,7 @@
 .post {
 
-  display: flex;
-  flex-direction: column;
   @include breakpoint($desktop-small) {
-
+    display: flex;
     min-height: calc(100vh - 75px - 130px); /* 100vh - header - footer */
   }
 
@@ -11,24 +9,14 @@
     min-height: calc(100vh - 100px - 200px); /* 100vh - header - footer */
   }
 
-  .title-section {
-    margin-bottom: 80px;
-    border-bottom: 1px solid #eaecef;
-  }
-
   .current-article {
-    position: relative;
-    overflow: hidden;
-
     @include breakpoint($desktop-small) {
-      // width: 66%;
+      width: 66%;
     }
 
     .news-title {
-      font-size: 2.5rem;
-      text-align: center;
       @include breakpoint($desktop-small) {
-        font-size: 3.5rem;
+        font-size: 2rem;
       }
     }
   }
@@ -56,12 +44,7 @@
     // }
 
     @media only screen and (min-width: 1500px) {
-      padding: 80px 245px 95px;
-    }
-
-    @media only screen and (min-width: 2000px) {
-      max-width: 1510px;
-      margin: auto;
+      padding: 80px 140px 95px;
     }
 
     article, article p { font-size: 16px !important;}
@@ -87,13 +70,11 @@
      }
 
     h1, h2 {
+      border-bottom: 1px solid #eaecef;
       padding-top: 0;
       margin-bottom: 16px;
       padding-bottom: .3em;
       margin-top: 24px;
-      &.no-border {
-        border-bottom: none;
-      }
     }
 
     h1 {
@@ -163,12 +144,6 @@
       top: $spacing--xs;
     }
   }
-  .news {
-    &.bottom-layout {
-      padding-top: 100px;
-      padding-bottom: 80px;
-    }
-  }
 
   .news-title {
     margin-bottom: $spacing--s;
@@ -176,8 +151,6 @@
 
   .author {
     margin-bottom: $spacing--m;
-    text-align: center;
-    margin-top: -25px;
   }
 
   .author-img {
@@ -193,7 +166,7 @@
   }
 
   .author-name {
-    // vertical-align: middle;
+    vertical-align: middle;
     margin-left: 2px;
 
    @include breakpoint($desktop-small) {
@@ -207,11 +180,11 @@
 
   .news {
     background: $color--gray;
-    // padding: 40px $spacing--l 65px;
+    padding: 40px $spacing--l 65px;
 
     @include breakpoint($desktop-small) {
-      // padding: 50px 60px;
-      // width: 34%;
+      padding: 50px 60px;
+      width: 34%;
     }
 
     .news-date {
@@ -301,21 +274,4 @@
       background-color: transparent;
     }
   }
-}
-
-.gradient-bg {
-  // @include breakpoint($desktop-small) {
-    position: absolute;
-    height: 1500px;
-    left: -500px;
-    right: -500px;
-    top: -1200px;
-    background: linear-gradient(180deg, #EDEFFA 15.75%, #D7DBF2 95.34%);
-    mix-blend-mode: normal;
-    opacity: 1;
-    filter: blur(122.323px);
-    border-radius: 10px;
-    transform: matrix(-0.93, -0.17, 0.4, 0.98, 0, 0);
-    overflow: hidden;
-  // }
 }
