Removed top gradient & Updated posts with author info

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,19 +9,17 @@ type: article
       <img class='post-hero' src='{{ site.baseurl }}/images/posts/{{page.hero-image}}' />
     {% endif %}
 
-
-    <div class="gradient-bg"></div>
     <section class='section article'>
       {% if page.caption %}
         <span class='caption'>{{ page.caption }}</span>
       {% endif %}
 
       <article>
-      <div class="title-section">
+      <div class="title-section center">
         <h2 class='text-l news-title no-border'>{{ page.title }}</h2>
 
         {% if page.author %}
-        <div class='author'>
+        <div class='author d-iblock'>
           <!-- list of all potential authors -->
 
           <span class='text-xxs author-name'>By
@@ -35,13 +33,9 @@ type: article
             </a> on
             {% endif %}
           </span>
-          <span class=''>{{ page.date | date: "%b %-d, %Y"}}</span>
-        </div>
-        {% else %}
-        <div class='author'>
-          <span class=''>{{ page.date | date: "%b %-d, %Y"}}</span>
         </div>
         {% endif %}
+        <span class='center'>{{ page.date | date: "%b %-d, %Y"}}</span>
       </div>
         <div class='text-xxs content-text generated-content'>
           {{ content }}
