--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -13,12 +13,11 @@
 
   .title-section {
     margin-bottom: 80px;
-    border-bottom: 1px solid #eaecef;
+    border-bottom: 1px solid #e2e2e2;
+    padding-bottom: 8px;
   }
 
   .current-article {
-    position: relative;
-    overflow: hidden;
 
     @include breakpoint($desktop-small) {
       // width: 66%;
@@ -175,7 +174,7 @@
   }
 
   .author {
-    margin-bottom: $spacing--m;
+    // margin-bottom: $spacing--m;
     text-align: center;
     margin-top: -25px;
   }
@@ -303,19 +302,12 @@
   }
 }
 
-.gradient-bg {
-  // @include breakpoint($desktop-small) {
-    position: absolute;
-    height: 1500px;
-    left: -500px;
-    right: -500px;
-    top: -1200px;
-    background: linear-gradient(180deg, #EDEFFA 15.75%, #D7DBF2 95.34%);
-    mix-blend-mode: normal;
-    opacity: 1;
-    filter: blur(122.323px);
-    border-radius: 10px;
-    transform: matrix(-0.93, -0.17, 0.4, 0.98, 0, 0);
-    overflow: hidden;
-  // }
+.center {
+  text-align: center;
+}
+.d-block {
+  display: block;
+}
+.d-iblock {
+  display: inline-block
 }
