Add prism.js, copy to clipboard, line-number, code-wrap
- Custom style
- Fix bg color on non-cpp code-block

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,14 @@ type: website
 <link href="{{ site.baseurl }}/css/style.css" rel="stylesheet">
 {% include favicon.html %}
 {% seo %}
+
+{% if page.layout == 'post' %}
+<link href="{{ site.baseurl }}/css/prism.css" rel="stylesheet">
+{% endif %}
+
 </head>
 
-<body id='body'>
+<body id='body' {% if page.layout == 'post' %}class="line-numbers"{% endif %}>
 
   <!-- Navigation -->
   <nav class='nav {{page.nav-class}}'>
@@ -75,6 +80,11 @@ type: website
     </div>
   </nav>
 
+
+
+
+
+
   {{ content }}
 
   <footer class='footer'>
@@ -86,6 +96,9 @@ type: website
 
   <!-- Bootstrap core JavaScript -->
   <script src='{{ site.baseurl }}/js/main.js'></script>
+  {% if page.layout == 'post' %}
+  <script src='{{ site.baseurl }}/js/prism.js'></script>
+  {% endif %}
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
