--- a/_sass/modules/layout.scss
+++ b/_sass/modules/layout.scss
@@ -304,7 +304,7 @@
     width: auto;
     overflow: auto;
     font-size: 95%;
-    background-color: rgba(27, 31, 35, 0.05);
+    background-color: #f6f8fa;
     border-radius: 4px;
     code {
       font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
