Show post dates at the blog footer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ type: article
         {% for post in site.posts %}
         {% if post.categories == page.categories %}
         <li class='news-list-item '>
-          <span class='text-s news-date'>{{ post.date | date: "%m/%d/%Y"}}</span>
+          <span class='text-xs news-date'>{{ post.date | date: "%m/%d/%Y"}}</span>
           <a class='text-l news-title link' href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
         </li>
         {% endif %}
