--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -215,7 +215,7 @@
 
     .news-date {
       @include breakpoint($desktop-small) {
-        display: none;
+        // display: none;
       }
     }
 
