Added Atom feed, Line-highlight of code-blocks, Pagination to news page
- Implemented the atom feed with Jekyll's Feed plugin: https://github.com/jekyll/jekyll-feed
- Added line-highlight feature on the code-block via prism.js
- Implemented pagination with Jekyll's pagination feature

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@ type: website
 <link href="{{ site.baseurl }}/css/prism.css" rel="stylesheet">
 {% endif %}
 
+<link href='{{ site.baseurl }}/feed.xml' rel='alternate' type='application/atom+xml'>
+
 </head>
 
 <body id='body' {% if page.layout == 'post' %}class="line-numbers"{% endif %}>
