--- a/_sass/modules/news.scss
+++ b/_sass/modules/news.scss
@@ -16,9 +16,9 @@
 .news-wrapper {
   padding: $spacing--m 0;
 
-  &:last-of-type {
-    padding: $spacing--m 0 $spacing--xs;
-  }
+  // &:last-of-type {
+  //   padding: $spacing--m 0 $spacing--xs;
+  // }
 
   @include breakpoint($desktop-small) {
     padding: $spacing--m 38% $spacing--m 0;
@@ -113,4 +113,145 @@
   @include breakpoint($desktop-large) {
     margin-bottom: 40px;
   }
+}
+
+.rss {
+  z-index: 10;
+  padding-left: 8px;
+}
+
+.icon-size {
+  height: 24px;
+  width: 24px;
+  @include breakpoint($desktop-small) {
+    height: 32px;
+    width: 32px;
+  }
+  @include breakpoint($desktop-large) {
+    height: 48px;
+    width: 48px;
+  }
+}
+
+.section-title {
+  .header-shadow {
+    z-index: -1;
+  }
+}
+
+.pagination {
+  @include clearfix();
+  margin-top: 1em;
+  padding-top: 1em;
+  width: 100%;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    // font-family: $sans-serif;
+  }
+
+  li {
+    display: block;
+    float: left;
+    margin-left: -1px;
+
+    a {
+      display: block;
+      margin-bottom: 0.25em;
+      padding: 0.2em 0.8em;
+      // font-family: $sans-serif;
+      font-size: 14px;
+      font-weight: bold;
+      line-height: 1.5;
+      text-align: center;
+      text-decoration: none;
+      color: $muted-text-color;
+      border: 1px solid mix(#000, $border-color, 25%);
+      border-radius: 0;
+
+      @include breakpoint($phone-large) {
+        padding: 0.5em 1em;
+      }
+
+      &:hover {
+        color: $link-color-hover;
+      }
+
+      &.current,
+      &.current.disabled {
+        color: #fff;
+        background: $primary-color;
+      }
+
+      &.disabled {
+        color: rgba($muted-text-color, 0.5);
+        pointer-events: none;
+        cursor: not-allowed;
+      }
+    }
+
+    &:first-child {
+      margin-left: 0;
+
+      a {
+        border-top-left-radius: $border-radius;
+        border-bottom-left-radius: $border-radius;
+      }
+    }
+
+    &:last-child {
+      a {
+        border-top-right-radius: $border-radius;
+        border-bottom-right-radius: $border-radius;
+      }
+    }
+  }
+
+  /* next/previous buttons */
+  &--pager {
+    display: block;
+    padding: 1em 2em;
+    float: left;
+    width: 50%;
+    // font-family: $sans-serif;
+    font-size: $type-size-5;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: $muted-text-color;
+    border: 1px solid mix(#000, $border-color, 25%);
+    border-radius: $border-radius;
+
+    &:hover {
+      @include yiq-contrasted($muted-text-color);
+    }
+
+    &:first-child {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    &:last-child {
+      margin-left: -1px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    &.disabled {
+      color: rgba($muted-text-color, 0.5);
+      pointer-events: none;
+      cursor: not-allowed;
+    }
+  }
+}
+
+.page__content + .pagination,
+.page__meta + .pagination,
+.page__share + .pagination,
+.page__comments + .pagination {
+  margin-top: 2em;
+  padding-top: 2em;
+  border-top: 1px solid $border-color;
 }
