Add twitter card image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,25 @@ type: website
 
 <link href='{{ site.baseurl }}/feed.xml' rel='alternate' type='application/atom+xml'>
 
+<!-- Twitter Card Start -->
+
+{% if page.summary %}
+<meta name="twitter:description" content="{{ page.summary }}">
+{% endif %}
+
+{% if page.largeimage %}
+  <meta name="twitter:card"  content="summary_large_image">
+  <meta name="twitter:image" content="{{ site.url }}{{ page.largeimage }}">
+{% else %}
+  {% if page.image %}
+    <meta name="twitter:card"  content="summary">
+    <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
+  {% else %}
+    <meta name="twitter:image" content="{{ site.title_image }}">
+  {% endif %}
+{% endif %}
+<!-- Twitter Card End -->
+
 </head>
 
 <body id='body' {% if page.layout == 'post' %}class="line-numbers"{% endif %}>
