Add a new member

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@ type: website
 <meta name="twitter:description" content="{{ page.summary }}">
 {% endif %}
 
-{% if page.largeimage %}
+{% if page.large-image %}
   <meta name="twitter:card"  content="summary_large_image">
-  <meta name="twitter:image" content="{{ site.url }}{{ page.largeimage }}">
+  <meta name="twitter:image" content="{{ site.url }}{{ page.large-image }}">
 {% else %}
   {% if page.image %}
     <meta name="twitter:card"  content="summary">
